refactor into test methods inside one testclass for each test